<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.6">
  <GVL Name="GVL" Id="{94734850-411d-4576-a0e7-f0a38cdbbc44}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
    (*******************************************************************)
    (* Allgemeine Globale Variablen *)
    (*******************************************************************)
    (******* FREIGABEN *********)
    //ST01
    xFG_ST01akVZ : BOOL; // Vereinzelung Teil anwesend
    xFG_ST01akWT : BOOL; // WT anwesend
    //ST02
    xFG_ST02akWT : BOOL; // WT anwesend

    _Process1  : FB_AUT_LOAD;   // Laden Filtergehäuse
    _Process2  : FB_AUT_110;    // Laden RFID-Ring
    _Process3  : FB_AUT_115;    // Laden kristal
    _Process4  : FB_AUT_120;    // Laden Solerohr
    _Process5  : FB_AUT_125;    // Laden filterhut
    _Process6  : FB_AUT_MODIFY; // Dosieren A
    _Process7  : FB_AUT_MODIFY; // Dosieren B
    _Process8  : FB_AUT_MODIFY; // Niveaukontrolle
    _Process9  : FB_AUT_LOAD;   // Laden Patronendeckel
    _Process10 : FB_AUT_MODIFY; // Utralson A
    _Process11 : FB_AUT_MODIFY; // Ultrason B
    _Process12 : FB_AUT_MODIFY; // Prüfig A
    _Process13 : FB_AUT_MODIFY; // Prüfig B
    _Process14 : FB_AUT_MODIFY; // Program RFID
    _Process15 : FB_AUT_MODIFY; // Laser A
    _Process16 : FB_AUT_MODIFY; // Laser B
    _Process17 : FB_AUT_UNLOAD; // Entladen schlecht
    _Process18 : FB_AUT_UNLOAD; // Entladen gut

END_VAR
]]></Declaration>
  </GVL>
</TcPlcObject>